# metaphor-plugin-dev

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/commands/: config.md  deploy.md  dev.md  docker.md  docs.md  jobs.md  lint.md  test.md
docs/guides/: ci-integration.md  development-workflow.md  getting-started.md
docs/reference/: clippy-rules.md  configuration.md  job-templates.md
src/: deploy_config.rs  lib.rs  main.rs  project.rs
src/commands/: config.rs  deploy.rs  deploy_history.rs  dev.rs  docker.rs  docs.rs  jobs.rs  lint.rs  mod.rs  test.rs
src/templates/jobs/: job.rs
